--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,19 @@
 \include{misc/list-of-symbols.tex}
 
 % Include chapters one-by-one
+\include{chapters/00.tex}
 \include{chapters/01.tex}
+\include{chapters/02.tex}
+\include{chapters/03.tex}
+\include{chapters/04.tex}
+\include{chapters/05.tex}
+\include{chapters/06.tex}
+\include{chapters/07.tex}
+\include{chapters/08.tex}
+\include{chapters/09.tex}
+\include{chapters/10.tex}
+\include{chapters/11.tex}
+\include{chapters/12.tex}
 
 \printbibliography[title={Wykaz literatury},heading=bibintoc]
 
