proba naprawy odstepu w spisie tresci

--- a/config/preamble.sty
+++ b/config/preamble.sty
@@ -154,3 +154,7 @@
 
 % Specialized user-defined macros can be stored in a separate file
 \usepackage{config/macros}
+
+% add space between number and text in tableofcontents
+% \usepackage[titles]{tocloft}
+% \addlength{\cftsecnumwidth}{10em}
