--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,8 @@
 
 \begin{document}
 
+% \frenchspacing
+
 \pagenumbering{gobble}  % Do not number the first pages
 
 % A title page generated from mojaPG
